Remove the tq in front of these incorrectly TQt4-converted methods/data members: tqrepaint[...] tqinvalidate[...] tqparent[...] tqmask[...] tqlayout[...] tqalignment[...]
svn path=/branches/trinity/kdeaccessibility/kmouth/; revision=1240522

--- a/phrasebook/buttonboxui.ui
+++ b/phrasebook/buttonboxui.ui
@@ -103,5 +103,5 @@
         </widget>
     </grid>
 </widget>
-<tqlayoutdefaults spacing="6" margin="11"/>
+<layoutdefaults spacing="6" margin="11"/>
 </UI>
