--- a/preferencesui.ui
+++ b/preferencesui.ui
@@ -158,5 +158,5 @@
         </widget>
     </vbox>
 </widget>
-<tqlayoutdefaults spacing="6" margin="11"/>
+<layoutdefaults spacing="6" margin="11"/>
 </UI>
