--- a/wordcompletion/creationsourcedetailsui.ui
+++ b/wordcompletion/creationsourcedetailsui.ui
@@ -172,7 +172,7 @@
 <functions>
     <function access="private" specifier="non virtual">init()</function>
 </functions>
-<tqlayoutdefaults spacing="6" margin="11"/>
+<layoutdefaults spacing="6" margin="11"/>
 <includehints>
     <includehint>kinputdialog.h</includehint>
     <includehint>kpushbutton.h</includehint>
