--- a/wordcompletion/wordcompletionui.ui
+++ b/wordcompletion/wordcompletionui.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>WordCompletionUI</class>
- <widget class="QWidget" name="WordCompletionUI" >
-  <property name="geometry" >
+ <widget class="QWidget" name="WordCompletionUI">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,68 +10,69 @@
     <height>300</height>
    </rect>
   </property>
-  <layout class="QGridLayout" >
-   <property name="margin" >
+  <layout class="QGridLayout">
+   <property name="margin">
     <number>9</number>
    </property>
-   <property name="spacing" >
+   <property name="spacing">
     <number>6</number>
    </property>
-   <item row="1" column="0" >
-    <widget class="QGroupBox" name="selectedDictionaryDetails" >
-     <property name="enabled" >
+   <item row="1" column="0">
+    <widget class="QGroupBox" name="selectedDictionaryDetails">
+     <property name="enabled">
       <bool>false</bool>
      </property>
-     <property name="sizePolicy" >
-      <sizepolicy>
-       <hsizetype>5</hsizetype>
-       <vsizetype>5</vsizetype>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="title" >
+     <property name="title">
       <string>&amp;Selected Dictionary</string>
      </property>
-     <layout class="QGridLayout" >
-      <property name="margin" >
+     <layout class="QGridLayout">
+      <property name="margin">
        <number>9</number>
       </property>
-      <property name="spacing" >
+      <property name="spacing">
        <number>6</number>
       </property>
-      <item row="1" column="1" >
-       <widget class="KLanguageButton" name="languageButton" />
+      <item row="1" column="1">
+       <widget class="KLanguageButton" name="languageButton" native="true"/>
       </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="languageLabel" >
-        <property name="whatsThis" >
+      <item row="1" column="0">
+       <widget class="QLabel" name="languageLabel">
+        <property name="whatsThis">
          <string>With this combo box you select the language associated with the selected dictionary.</string>
         </property>
-        <property name="text" >
+        <property name="text">
          <string>&amp;Language:</string>
         </property>
-        <property name="buddy" >
+        <property name="buddy">
          <cstring>languageButton</cstring>
         </property>
        </widget>
       </item>
-      <item row="0" column="0" >
-       <widget class="QLabel" name="dictionaryNameLabel" >
-        <property name="whatsThis" >
+      <item row="0" column="0">
+       <widget class="QLabel" name="dictionaryNameLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="whatsThis">
          <string>With this input field you specify the name of the selected dictionary.</string>
         </property>
-        <property name="text" >
+        <property name="text">
          <string>&amp;Name:</string>
         </property>
-        <property name="buddy" >
+        <property name="buddy">
          <cstring>dictionaryName</cstring>
         </property>
        </widget>
       </item>
-      <item row="0" column="1" >
-       <widget class="KLineEdit" name="dictionaryName" >
-        <property name="whatsThis" >
+      <item row="0" column="1">
+       <widget class="KLineEdit" name="dictionaryName">
+        <property name="whatsThis">
          <string>With this input field you specify the name of the selected dictionary.</string>
         </property>
        </widget>
@@ -78,125 +80,115 @@
      </layout>
     </widget>
    </item>
-   <item rowspan="2" row="0" column="1" >
-    <layout class="QVBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+   <item row="0" column="1" rowspan="2">
+    <layout class="QVBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
      <item>
-      <widget class="KPushButton" name="addButton" >
-       <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>1</hsizetype>
-         <vsizetype>0</vsizetype>
+      <widget class="KPushButton" name="addButton">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="whatsThis" >
+       <property name="whatsThis">
         <string>With this button you can add a new dictionary to the list of available dictionaries.</string>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>Add D&amp;ictionary...</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="KPushButton" name="deleteButton" >
-       <property name="enabled" >
+      <widget class="KPushButton" name="deleteButton">
+       <property name="enabled">
         <bool>false</bool>
        </property>
-       <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>1</hsizetype>
-         <vsizetype>0</vsizetype>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="whatsThis" >
+       <property name="whatsThis">
         <string>With this button you delete the selected dictionary.</string>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>&amp;Delete Dictionary</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="KPushButton" name="moveUpButton" >
-       <property name="enabled" >
+      <widget class="KPushButton" name="moveUpButton">
+       <property name="enabled">
         <bool>false</bool>
        </property>
-       <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>1</hsizetype>
-         <vsizetype>0</vsizetype>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="whatsThis" >
+       <property name="whatsThis">
         <string>With this button you move the selected dictionary up.</string>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>Move &amp;Up</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="KPushButton" name="moveDownButton" >
-       <property name="enabled" >
+      <widget class="KPushButton" name="moveDownButton">
+       <property name="enabled">
         <bool>false</bool>
        </property>
-       <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>1</hsizetype>
-         <vsizetype>0</vsizetype>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="whatsThis" >
+       <property name="whatsThis">
         <string>With this button you move the selected dictionary down.</string>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>&amp;Move Down</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="KPushButton" name="exportButton" >
-       <property name="enabled" >
+      <widget class="KPushButton" name="exportButton">
+       <property name="enabled">
         <bool>false</bool>
        </property>
-       <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>1</hsizetype>
-         <vsizetype>0</vsizetype>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="whatsThis" >
+       <property name="whatsThis">
         <string>With this button you export the selected dictionary to a file.</string>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>&amp;Export Dictionary...</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeType" >
+       <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>240</height>
@@ -206,60 +198,51 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="0" >
-    <widget class="K3ListView" name="dictionaryList" >
-     <property name="whatsThis" >
+   <item row="0" column="0">
+    <widget class="QTableView" name="dictionaryView">
+     <property name="whatsThis">
       <string>This list contains all available dictionaries for the word completion. KMouth will display a combo box next to the edit field in the main window if this list contains more than one dictionary. You can use this combo box in order to select the dictionary that actually gets used for the word completion.</string>
      </property>
-     <property name="allColumnsShowFocus" >
+     <property name="selectionMode">
+      <enum>QAbstractItemView::SingleSelection</enum>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+     <property name="allColumnsShowFocus" stdset="0">
       <bool>true</bool>
      </property>
-     <column>
-      <property name="text" >
-       <string>Dictionary</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>Language</string>
-      </property>
-     </column>
+     <attribute name="horizontalHeaderVisible">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
     </widget>
    </item>
   </layout>
  </widget>
-  <customwidgets>
+ <customwidgets>
   <customwidget>
-   <class>K3ListView</class>
-   <extends>Q3ListView</extends>
-   <header>k3listview.h</header>
-   <container>0</container>
-   <pixmap></pixmap>
+   <class>KLanguageButton</class>
+   <extends>QWidget</extends>
+   <header>klanguagebutton.h</header>
   </customwidget>
   <customwidget>
    <class>KLineEdit</class>
    <extends>QLineEdit</extends>
    <header>klineedit.h</header>
-   <container>0</container>
-   <pixmap></pixmap>
-  </customwidget>
-  <customwidget>
-   <class>KLanguageButton</class>
-   <extends>QWidget</extends>
-   <header>klanguagebutton.h</header>
-   <container>0</container>
-   <pixmap></pixmap>
   </customwidget>
   <customwidget>
    <class>KPushButton</class>
    <extends>QPushButton</extends>
    <header>kpushbutton.h</header>
-   <container>0</container>
-   <pixmap></pixmap>
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>dictionaryList</tabstop>
   <tabstop>addButton</tabstop>
   <tabstop>deleteButton</tabstop>
   <tabstop>moveUpButton</tabstop>
