--- a/texttospeechconfigurationui.ui
+++ b/texttospeechconfigurationui.ui
@@ -6,17 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>391</width>
+    <width>466</width>
     <height>222</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Text-to-Speech</string>
   </property>
-  <layout class="QVBoxLayout">
-   <property name="spacing">
-    <number>6</number>
-   </property>
+  <layout class="QGridLayout" name="gridLayout">
    <property name="leftMargin">
     <number>11</number>
    </property>
@@ -29,142 +26,196 @@
    <property name="bottomMargin">
     <number>11</number>
    </property>
-   <item>
-    <widget class="QCheckBox" name="useQtSpeech">
-     <property name="whatsThis">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This check box specifies KMouth tries to use the system speech service prior to calling the speech synthesizer directly. The system speech service is a Qt library which wraps speech-dispatcher on linux, and native speech systems on other platforms.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-     <property name="text">
+   <item row="0" column="0" rowspan="4">
+    <widget class="QGroupBox" name="qtspeechGroupBox">
+     <property name="title">
       <string>&amp;Use default speech system</string>
      </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <layout class="QFormLayout" name="formLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>&amp;Engine:</string>
+        </property>
+        <property name="buddy">
+         <cstring>engineComboBox</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="engineComboBox">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>&amp;Voice:</string>
+        </property>
+        <property name="buddy">
+         <cstring>voiceComboBox</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="voiceComboBox">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
-   <item>
-    <layout class="QVBoxLayout">
-     <property name="spacing">
-      <number>6</number>
+   <item row="0" column="1" rowspan="4">
+    <widget class="QGroupBox" name="alternativeGroupBox">
+     <property name="enabled">
+      <bool>false</bool>
      </property>
-     <property name="leftMargin">
-      <number>0</number>
+     <property name="title">
+      <string>Alternative</string>
      </property>
-     <property name="topMargin">
-      <number>0</number>
-     </property>
-     <property name="rightMargin">
-      <number>0</number>
-     </property>
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="urlLabel">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="whatsThis">
-        <string>This field specifies both the command used for speaking texts and its parameters. KMouth knows the following placeholders:
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <layout class="QVBoxLayout">
+        <property name="spacing">
+         <number>6</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="urlLabel">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="whatsThis">
+           <string>This field specifies both the command used for speaking texts and its parameters. KMouth knows the following placeholders:
 %t -- the text that should be spoken
 %f -- the name of a file containing the text
 %l -- the language code
 %% -- a percent sign</string>
-       </property>
-       <property name="text">
-        <string>Alternative command for speaking &amp;texts:</string>
-       </property>
-       <property name="buddy">
-        <cstring>urlReq</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="KUrlRequester" name="urlReq">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="whatsThis">
-        <string>This field specifies both the command used for speaking texts and its parameters. KMouth knows the following placeholders:
+          </property>
+          <property name="text">
+           <string>Command for speaking &amp;texts:</string>
+          </property>
+          <property name="buddy">
+           <cstring>urlReq</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="KUrlRequester" name="urlReq" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="whatsThis">
+           <string>This field specifies both the command used for speaking texts and its parameters. KMouth knows the following placeholders:
 %t -- the text that should be spoken
 %f -- the name of a file containing the text
 %l -- the language code
 %% -- a percent sign</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QVBoxLayout">
-     <property name="spacing">
-      <number>6</number>
-     </property>
-     <property name="leftMargin">
-      <number>0</number>
-     </property>
-     <property name="topMargin">
-      <number>0</number>
-     </property>
-     <property name="rightMargin">
-      <number>0</number>
-     </property>
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="characterCodingLabel">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="whatsThis">
-        <string>This combo box specifies which character encoding is used for passing the text.</string>
-       </property>
-       <property name="text">
-        <string>Character encodin&amp;g:</string>
-       </property>
-       <property name="buddy">
-        <cstring>characterCodingBox</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="KComboBox" name="characterCodingBox">
-       <property name="whatsThis">
-        <string>This combo box specifies which character encoding is used for passing the text.</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="stdInButton">
-     <property name="whatsThis">
-      <string>This check box specifies whether the text is sent as standard input to the speech synthesizer.</string>
-     </property>
-     <property name="text">
-      <string>Send the data as standard &amp;input</string>
-     </property>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="stdInButton">
+        <property name="whatsThis">
+         <string>This check box specifies whether the text is sent as standard input to the speech synthesizer.</string>
+        </property>
+        <property name="text">
+         <string>Send the data as standard &amp;input</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QVBoxLayout">
+        <property name="spacing">
+         <number>6</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="characterCodingLabel">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="whatsThis">
+           <string>This combo box specifies which character encoding is used for passing the text.</string>
+          </property>
+          <property name="text">
+           <string>Character encodin&amp;g:</string>
+          </property>
+          <property name="buddy">
+           <cstring>characterCodingBox</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="KComboBox" name="characterCodingBox">
+          <property name="whatsThis">
+           <string>This combo box specifies which character encoding is used for passing the text.</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>KUrlRequester</class>
-   <extends>QWidget</extends>
-   <header>kurlrequester.h</header>
-  </customwidget>
-  <customwidget>
    <class>KComboBox</class>
    <extends>QComboBox</extends>
    <header>kcombobox.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KUrlRequester</class>
+   <extends>QWidget</extends>
+   <header>kurlrequester.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
